add mobile responsive from navbar

--- a/src/app/desktop/desktop.component.html
+++ b/src/app/desktop/desktop.component.html
@@ -1,6 +1,8 @@
 <section>
-    <app-header id="navHeader" />
-    <app-navbar />
+    <div class="header">
+        <app-header id="navHeader" />
+        <app-navbar />
+    </div>
     <app-main />
     <app-footer />
 </section>
