--- a/src/app/desktop/main/my-projects/my-projects.component.scss
+++ b/src/app/desktop/main/my-projects/my-projects.component.scss
@@ -2,246 +2,249 @@
 @use '../../../../styles/global-fonts' as *;
 @use '../../../../styles/globle-mixin' as *;
 
-section {
-    width: calc(100vw - 20px);
-    user-select: none;
+// >> Desktop Design << \\
+@media (min-width: 1440px) {
+    section {
+        width: calc(100vw - $scrollbar-w);
+        user-select: none;
 
-    >div {
+        >div {
 
-        @include flex($fd: column, $g: 64px);
+            @include flex($fd: column, $g: 64px);
+        }
     }
-}
 
-.headline {
-    user-select: text;
-    text-align: center;
+    .headline {
+        user-select: text;
+        text-align: center;
 
-    >h3 {
+        >h3 {
 
-        @include font($c: $main-color-lightblue, $fw: 400, $fs: 60px, $ff: 'Anta');
+            @include font($c: $main-color-lightblue, $fw: 400, $fs: 60px, $ff: 'Anta');
+        }
     }
-}
 
-.container {
-    max-height: 645px;
-    height: 645px;
-}
-
-// >> Nav Container
-.c-nav {
-    width:  calc(100vw - 20px);
-
-    @include flex();
-
-    >ul {
-        max-width: 1199px;
-        width: 1199px;
-        display: flex;
+    .container {
+        max-height: 645px;
+        height: 645px;
     }
-}
 
-.c-nav-list-item {
-    width: 248px;
-    height: 97px;
+    // >> Nav Container
+    .c-nav {
+        width: calc(100vw - 20px);
 
-    @include flex();
+        @include flex();
 
-    >button {
-        >span {
+        >ul {
+            max-width: 1199px;
+            width: 1199px;
+            display: flex;
+        }
+    }
 
-            @include font($c: $main-color-lightblue, $fw: 500, $fs: 30px, $ff: 'Josefin Sans');
+    .c-nav-list-item {
+        width: 248px;
+        height: 97px;
 
-            &:hover {
-                transition: all 120ms;
-                cursor: pointer;
+        @include flex();
+
+        >button {
+            >span {
+
+                @include font($c: $main-color-lightblue, $fw: 500, $fs: 30px, $ff: 'Josefin Sans');
+
+                &:hover {
+                    transition: all 120ms;
+                    cursor: pointer;
+                    color: $main-color-white;
+                }
+            }
+        }
+    }
+
+    .activ-nav-btn {
+        background-color: $main-color-lightblack;
+        border-radius: 30px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        cursor: default;
+
+        >button {
+            >span {
                 color: $main-color-white;
             }
         }
     }
-}
 
-.activ-nav-btn {
-    background-color: $main-color-lightblack;
-    border-radius: 30px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    cursor: default;
+    .c-main-back {
+        background-color: $main-color-lightblack;
+        width: calc(100vw - 20px);
+        height: 548px;
 
-    >button {
-        >span {
-            color: $main-color-white;
+        @include flex();
+    }
+
+    .c-main {
+        background-color: $main-color-lightblack;
+        max-width: 1199px;
+        max-height: 548px;
+        padding: 32px 0;
+
+        @include flex($g: 32px, $jc: flex-start, $ai: flex-start);
+    }
+
+    .activ-main {
+        animation-name: fadeIn;
+        animation-duration: 500ms;
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
         }
     }
-}
 
-.c-main-back {
-    background-color: $main-color-lightblack;
-    width:  calc(100vw - 20px);
-    height: 548px;
+    // >> Main Left Container
+    .c-main-list {
+        width: 690px;
+        height: 93;
 
-    @include flex();
-}
-
-.c-main {
-    background-color: $main-color-lightblack;
-    max-width: 1199px;
-    max-height: 548px;
-    padding: 32px 0;
-
-    @include flex($g: 32px, $jc: flex-start, $ai: flex-start);
-}
-
-.activ-main {
-    animation-name: fadeIn;
-    animation-duration: 500ms;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
+        @include flex($fd: column, $g: 24px);
     }
 
-    to {
-        opacity: 1;
-    }
-}
-
-// >> Main Left Container
-.c-main-list {
-    width: 690px;
-    height: 93;
-
-    @include flex($fd: column, $g: 24px);
-}
-
-.c-main-list-item {
-    display: flex;
-
-    >img {
-        margin-right: 24px;
-
-        @include img($w: 29px, $h: 26px, $of: contain);
-    }
-}
-
-.c-main-list-item-text {
-    user-select: text;
-
-    @include flex($ai: flex-start, $fd: column, $g: 24px);
-
-    >span {
-
-        @include font($c: $main-color-white, $fw: 400, $fs: 28px, $ff: 'Josefin Sans');
-    }
-
-    >p {
-
-        @include font($c: $main-color-white, $fw: 400, $fs: 18px, $ff: 'Josefin Sans');
-    }
-}
-
-.c-main-weeks {
-    padding-left: 20px;
-
-    @include font($c: $main-color-white, $fw: 400, $fs: 18px, $ff: 'Josefin Sans');
-}
-
-// >> Main Right Container
-.c-main-right {
-
-    @include flex($fd: column, $g: 16px, $jc: flex-start);
-}
-
-.c-main-right-top {
-    width: 168px;
-    text-align: center;
-
-    @include flex($fd: column-reverse, $g: 12px);
-
-    >div {
-
-        @include flex($g: 32px);
+    .c-main-list-item {
+        display: flex;
 
         >img {
+            margin-right: 24px;
 
-            @include img($w: 32px, $h: 36px);
+            @include img($w: 29px, $h: 26px, $of: contain);
         }
     }
 
-    >figcaption {
+    .c-main-list-item-text {
+        user-select: text;
+
+        @include flex($ai: flex-start, $fd: column, $g: 24px);
+
         >span {
+
+            @include font($c: $main-color-white, $fw: 400, $fs: 28px, $ff: 'Josefin Sans');
+        }
+
+        >p {
 
             @include font($c: $main-color-white, $fw: 400, $fs: 18px, $ff: 'Josefin Sans');
         }
     }
-}
 
-.c-main-right-bottom {
+    .c-main-weeks {
+        padding-left: 20px;
 
-    @include flex($fd: column, $g: 34px);
-
-    >img {
-
-        @include img($w: 453.47, $h: 312);
+        @include font($c: $main-color-white, $fw: 400, $fs: 18px, $ff: 'Josefin Sans');
     }
 
-    >figcaption {
+    // >> Main Right Container
+    .c-main-right {
 
-        @include flex($g: 32px);
+        @include flex($fd: column, $g: 16px, $jc: flex-start);
+    }
 
-        >a {
-            transition: all 120ms;
-            width: 132px;
-            height: 48px;
-            border-radius: 30px;
-            border-style: solid;
+    .c-main-right-top {
+        width: 168px;
+        text-align: center;
 
-            @include flex();
+        @include flex($fd: column-reverse, $g: 12px);
 
-            >span {
+        >div {
 
-                @include font($fw: 400, $fs: 18px, $ff: 'Josefin Sans');
+            @include flex($g: 32px);
+
+            >img {
+
+                @include img($w: 32px, $h: 36px);
             }
         }
 
-        >a:first-child {
-            background-color: $main-color-lightblue;
-            border-color: $main-color-lightblue;
-
+        >figcaption {
             >span {
-                color: $main-color-black;
-            }
 
-            &:hover {
-                background-color: $main-color-white;
-                border-color: $main-color-white;
-            }
-        }
-
-        >a:last-child {
-            border-color: $main-color-lightblue;
-
-            >span {
-                color: $main-color-lightblue;
-            }
-
-            &:hover {
-                background-color: $main-color-white-hover;
+                @include font($c: $main-color-white, $fw: 400, $fs: 18px, $ff: 'Josefin Sans');
             }
         }
     }
-}
 
-.comming-soon {
-    width: 453.47px;
-    height: 312px;
-    background-color: $main-color-white;
-    border-radius: 30px;
+    .c-main-right-bottom {
 
-    @include flex();
+        @include flex($fd: column, $g: 34px);
 
-    >span {
+        >img {
 
-        @include font($c: $main-color-lightblue, $fw: 500, $fs: 30px, $ff: 'Josefin Sans');
+            @include img($w: 453.47, $h: 312);
+        }
+
+        >figcaption {
+
+            @include flex($g: 32px);
+
+            >a {
+                transition: all 120ms;
+                width: 132px;
+                height: 48px;
+                border-radius: 30px;
+                border-style: solid;
+
+                @include flex();
+
+                >span {
+
+                    @include font($fw: 400, $fs: 18px, $ff: 'Josefin Sans');
+                }
+            }
+
+            >a:first-child {
+                background-color: $main-color-lightblue;
+                border-color: $main-color-lightblue;
+
+                >span {
+                    color: $main-color-black;
+                }
+
+                &:hover {
+                    background-color: $main-color-white;
+                    border-color: $main-color-white;
+                }
+            }
+
+            >a:last-child {
+                border-color: $main-color-lightblue;
+
+                >span {
+                    color: $main-color-lightblue;
+                }
+
+                &:hover {
+                    background-color: $main-color-white-hover;
+                }
+            }
+        }
+    }
+
+    .comming-soon {
+        width: 453.47px;
+        height: 312px;
+        background-color: $main-color-white;
+        border-radius: 30px;
+
+        @include flex();
+
+        >span {
+
+            @include font($c: $main-color-lightblue, $fw: 500, $fs: 30px, $ff: 'Josefin Sans');
+        }
     }
 }
